--- a/src/index.html
+++ b/src/index.html
@@ -3,151 +3,176 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <nav>
-        <div class="logo">
+        <a href="#" class="logo">
             <img src="./img/logo.svg" alt="logo">
-        </div>
+        </a>
         <div class=" menu">
-         <a href="#">Features</a>
-         <a href="#">Pricing</a>
-         <a href="#">Integrations</a>
-         <a href="#">Retail software</a>
+          <a href="#">Features</a>
+          <a href="#">Pricing</a>
+          <a href="#">Integrations</a>
+          <a href="#">Retail software</a>
         </div>
         <div class="user">
-         <a href="#">Log in</a>
-         <a href="#">Request demo</a>
-         <button> <a href="#">Get started</a> </button>
+          <a href="#">Log in</a>
+          <a href="#">Request demo</a>
+          <a class="button" href="#"> Get started </a>
         </div>
     </nav>
     <div class="workplace">
-     <img src="./img/workplace-1245776_1920.png" alt="Workplace">
-     <section class="Omnichannel POS">
-         <h1>Omnichannel POS</h1>
-         <p>Sell in-store, at retail events, pop-up stores and even online. With all sales channels in one POS software, Hike manages all aspects of your retail business.</p>
-         <li>
-             <ul>
-                Sell in-store
-                Sell on-the-go
-                integrated eCommerce
-                Sell at Amazon 
-             </ul>
-         </li>
-         <button> Get started </button>
-         <img src="./img/women-1209678_1920.png" alt="women">
-     </section>
-     <section class="All-in-one retail ">  
+        <div class="text-section">
+        <h1>Grow your retail faster with 
+            Drona POS software</h1>
+            <p>Drona is a leading retail POS software in the cloud with everything you need to run & grow your business.</p>
+        </div>
+            <img src="./img/workplace-1245776_1920.png" alt="Workplace" class="workplace-img">
+    </div>
+        <div class="card-layout">
+         <section class="card">
+           <h2>Omnichannel POS</h2>
+           <p>Sell in-store, at retail events, pop-up stores and even online. With all sales channels in one POS software, Hike manages all aspects of your retail business.</p>
+           <ul>
+             <li>Sell in-store</li>
+             <li> Sell on-the-go</li>
+             <li> integrated eCommerce</li>
+             <li>at Amazon</li>
+            </ul>
+            <a class="button" href="#"> Get started </a>
+          <img src="./img/women-1209678_1920.png" alt="women" class="person-img">
+         </section>
+         <section class="card">  
          <h2> All-in-one retail </h2>
          <p>Sell in-store, at retail events, pop-up stores and even online. With all sales channels in one POS software, Hike manages all aspects of your retail business.</p>
-        <li>
-            <ul>
-                Sell in-store
-                Sell on-the-go
-                integrated eCommerce
-                Sell at Amazon 
-            </ul>
-        </li>
-        <button> Get started </button>
+         <ul>
+         <li>Sell in-store</li>
+         <li> Sell on-the-go</li>
+         <li> integrated eCommerce</li>
+         <li>Sell at Amazon</li> 
+         </ul>
+         <a class="button" href="#"> Get started </a>
          <img src="./img/entrepreneur-593358_1920.png" alt="enterpreneur">
-     </section>
-    </div>
+         </section>
+        </div>
     <div class="download">
-        <h3> Grow your retail faster with 
-            Drona POS software </h3>
-        <p>Drona POS software works on any iPad, PC and Mac. Don’t be limited to just working behind a counter next to clunky hardware.
-
-        </p>
-       <button> <img src="./img/dandr.svg" alt="download"> </button>
-       <button> <img src="./img/dios.svg" alt="download"> </button>
+        <div class="text-box">
+            <h3> Grow your retail faster with
+                Drona POS software </h3>
+            <p>Drona POS software works on any iPad, PC and Mac. Don’t be limited to just working behind a counter next to clunky hardware.
+            </p>
+            <section class="download-img">
+            <a href="#"> <img src="./img/dandr.svg" alt="download"> </a>
+            <a href="#"> <img src="./img/dios.svg" alt="download"> </a>
+            </section>
+        </div>
+        <img src="./img/startup-594091_1920.png" alt="startup" class="startup">
     </div>
     <div class="hike">
-        <img src="./img/ofice.png" alt="office">
-        <section>
-            <h4>
-                Extend the 
-                power of Hike
-            </h4>
+        <img src="./img/office.png" alt="office">
+        <div class="trial">
+            <h2>
+            Extend the power of Hike
+            </h2>
             <p>
-                Our POS software seamlessly integrates with industry leading accounting, eCommerce, payments & marketing apps.
+            Our POS software seamlessly integrates with industry leading accounting, eCommerce, payments & marketing apps.
             </p>
-            <button>Free trial</button>
-        </section>
-        <img src="./img/disney.svg" alt="disney">
-        <img src="./img/boss.svg" alt="boss">
-        <img src="./img/celine.svg" alt="celine">
-        <img src="./img/youtube.svg" alt="youtube">
-        <img src="./img/vimeo.svg" alt="vimeo">
+            <button> <a href="#">Free trial</a> </button>
+        </div>
+        <div class="logo-group">
+          <img src="./img/disney.svg" alt="disney">
+          <img src="./img/boss.svg" alt="boss">
+          <img src="./img/celine.svg" alt="celine">
+          <img src="./img/youtube.svg" alt="youtube">
+          <img src="./img/vimeo.svg" alt="vimeo">
+        </div>
     </div>
-    <div class="Testimonials">
-        <img src="./img/background.png" alt="background">
-        <h5>
-            Testimonials
-        </h5>
-        <p>
-            Don't just listen to us, check out what our 
-            clients are saying!
-        </p>
-        <section class="one">
-            <img src="./img/FakeDP.png" alt="foto">
+    <div>
+    <div class="testimonials">
+        <div class="testimonials-text">
+         <h2>
+         Testimonials
+         </h2>
+         <p>
+         Don't just listen to us, check out what our 
+         clients are saying!
+         </p>
+        </div>
+        <div class="quote">
+         <div class="one">
+            <img src="./img/FakeDP.png" alt="foto" class="foto-one">
             <p>
-                If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+             If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
             </p>
-        </section>
-        <section class="two">
-            <img src="./img/foto.png" alt="foto">
+         </div>
+         <div class="two">
+            <img src="./img/foto.png" alt="foto" class="foto-two">
             <p>
-                If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+            If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
             </p>
-        </section>
-        <section class="tree">
-            <img src="./img/fotolucy.png" alt="foto">
+         </div>
+         <div class="tree">
+            <img src="./img/fotolucy.png" alt="foto" class="foto-tree">
             <p>
-                If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+            If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
             </p>
-        </section>
-        <section class="four">
-            <img src="./img/fotoxl.png" alt="foto">
+         </div>
+         <div class="four">
+            <img src="./img/fotoxl.png" alt="foto" class="foto-four">
             <p> 
-                If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+            If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
             </p>
-        </section>
-        <section class="five">
-            <img src="./img/fotos.png" alt="foto">
+         </div>
+         <div class="five">
+            <img src="./img/fotos.png" alt="foto" class="foto-five">
             <p>
-                If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+            If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
             </p>
-        </section>
-    </div>
+         </div>
+        </div>
+    </div class="wrap" >
+     <footer>
+     <div class="footer">
+     <img src="./img/logofooter.svg" alt="logo">
+     <div class="contact us">
+      <ul>
+        <li> <a href="tel:+2905207927" +(290) 520-7927> <img src="./img/phone.svg" alt="phone" class="phone"> +(290) 520-7927  </a> </li>
+        <li> <a href="https://www.google.com/maps/place/Дубаї+-+Об'єднані+Арабські+Емірати/@25.0750853,54.947555,10z/data=!3m1!4b1!4m5!3m4!1s0x3e5f43496ad9c645:0xbde66e5084295162!8m2!3d25.2048493!4d55.2707828" Dubai, UAE></a> </li>
+        <li> <a href="mailto:info@halatalents.com" info@halatalents.com>info@halatalents.com</a> </li>
+       </ul>
+      </div>
+      <div class="our-company">
+       <ul>
+        <lu>About </lu>
+        <li>Pricing </li>
+        <li> Blog </li>
+        <li> About us </li>
+       </ul>
+      </div>
+      <div class="law">
+      <ul>
+        <li> Privacy Policy </li>
+        <li> Terms and Conditions</li>
+      </ul>
+      </div>
+      <div class="Social-Contacts">
+      <ul>
+        <li>Facebook</li>
+        <li>Linked In </li>
+        <li>Youtube </li>
+        <li>Twitter </li>
+       </ul>
+      </div>
+     </div>
+     <hr>
+     </footer>
+    <img src="./img/background.png" alt="background" class="background">
+  </div>
 </body>
-<footer>
-<img src="./img/logofooter.svg" alt="logo">
-<section class="contact us">
-    <ul>
-<a href="#" +(290) 520-7927></a>
-<a href="#" Dubai, UAE></a>
-<a href="#" info@halatalents.com></a>
-    </ul>
-</section>
-<section class="our company">
-    <ul>
-        About
-        Pricing
-        Blog
-        About us
-        Privacy Policy 
-        Terms and Conditions
-    </ul>
-</section>
-<section class="Social Contacts">
-    <ul>
-        Facebook
-        Linked In
-        Youtube
-        Twitter
-    </ul>
-</section>
-</footer>
 </html>
