--- a/src/index.html
+++ b/src/index.html
@@ -12,30 +12,29 @@
 </head>
 <body>
     <nav>
-        <a href="#" class="logo">
-            <img src="./img/logo.svg" alt="logo">
-        </a>
-        <div class=" menu">
-          <a href="#">Features</a>
-          <a href="#">Pricing</a>
-          <a href="#">Integrations</a>
-          <a href="#">Retail software</a>
-        </div>
-        <div class="user">
+     <a href="#" class="logo">
+     <img src="./img/logo.svg" alt="logo"> </a>
+      <div class=" menu">
+        <a href="#">Features</a>
+        <a href="#">Pricing</a>
+        <a href="#">Integrations</a>
+        <a href="#">Retail software</a>
+     </div>
+     <div class="user">
           <a href="#">Log in</a>
           <a href="#">Request demo</a>
           <a class="button" href="#"> Get started </a>
-        </div>
+     </div>
     </nav>
     <div class="workplace">
         <div class="text-section">
-        <h1>Grow your retail faster with 
+         <h1>Grow your retail faster with 
             Drona POS software</h1>
-            <p>Drona is a leading retail POS software in the cloud with everything you need to run & grow your business.</p>
+         <p>Drona is a leading retail POS software in the cloud with everything you need to run & grow your business.</p>
         </div>
-            <img src="./img/workplace-1245776_1920.png" alt="Workplace" class="workplace-img">
+       <img src="./img/workplace-1245776_1920.png" alt="Workplace" class="workplace-img">
     </div>
-        <div class="card-layout">
+     <div class="card-layout">
          <section class="card">
            <h2>Omnichannel POS</h2>
            <p>Sell in-store, at retail events, pop-up stores and even online. With all sales channels in one POS software, Hike manages all aspects of your retail business.</p>
@@ -61,7 +60,7 @@
          <img src="./img/entrepreneur-593358_1920.png" alt="enterpreneur">
          </section>
         </div>
-    <div class="download">
+        <div class="download">
         <div class="text-box">
             <h3> Grow your retail faster with
                 Drona POS software </h3>
@@ -93,7 +92,6 @@
           <img src="./img/vimeo.svg" alt="vimeo">
         </div>
     </div>
-    <div>
     <div class="testimonials">
         <div class="testimonials-text">
          <h2>
@@ -105,74 +103,77 @@
          </p>
         </div>
         <div class="quote">
-         <div class="one">
-            <img src="./img/FakeDP.png" alt="foto" class="foto-one">
-            <p>
+           <div class="one">
+             <img src="./img/FakeDP.png" alt="foto" class="foto-one">
+             <p>
              If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
-            </p>
-         </div>
-         <div class="two">
-            <img src="./img/foto.png" alt="foto" class="foto-two">
-            <p>
-            If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
-            </p>
-         </div>
-         <div class="tree">
-            <img src="./img/fotolucy.png" alt="foto" class="foto-tree">
-            <p>
-            If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
-            </p>
-         </div>
-         <div class="four">
-            <img src="./img/fotoxl.png" alt="foto" class="foto-four">
-            <p> 
-            If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
-            </p>
-         </div>
-         <div class="five">
-            <img src="./img/fotos.png" alt="foto" class="foto-five">
-            <p>
-            If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
-            </p>
-         </div>
-        </div>
-    </div class="wrap" >
-     <footer>
-     <div class="footer">
-     <img src="./img/logofooter.svg" alt="logo">
-     <div class="contact us">
-      <ul>
-        <li> <a href="tel:+2905207927" +(290) 520-7927> <img src="./img/phone.svg" alt="phone" class="phone"> +(290) 520-7927  </a> </li>
-        <li> <a href="https://www.google.com/maps/place/Дубаї+-+Об'єднані+Арабські+Емірати/@25.0750853,54.947555,10z/data=!3m1!4b1!4m5!3m4!1s0x3e5f43496ad9c645:0xbde66e5084295162!8m2!3d25.2048493!4d55.2707828" Dubai, UAE></a> </li>
-        <li> <a href="mailto:info@halatalents.com" info@halatalents.com>info@halatalents.com</a> </li>
-       </ul>
-      </div>
-      <div class="our-company">
-       <ul>
-        <lu>About </lu>
-        <li>Pricing </li>
-        <li> Blog </li>
-        <li> About us </li>
-       </ul>
-      </div>
-      <div class="law">
-      <ul>
-        <li> Privacy Policy </li>
-        <li> Terms and Conditions</li>
-      </ul>
-      </div>
-      <div class="Social-Contacts">
-      <ul>
-        <li>Facebook</li>
-        <li>Linked In </li>
-        <li>Youtube </li>
-        <li>Twitter </li>
-       </ul>
-      </div>
+             </p>
+           </div>
+           <div class="two">
+             <img src="./img/foto.png" alt="foto" class="foto-two">
+             <p>
+             If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+             </p>
+            </div>
+            <div class="three">
+             <img src="./img/three.png" alt="foto" class="foto-three">
+             <p>
+             If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+             </p>
+            </div>
+            <div class="four">
+             <img src="./img/fotolucy.png" alt="foto" class="foto-four">
+             <p> 
+             If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+             </p>
+            </div>
+            <div class="five">
+             <img src="./img/fotos.png" alt="foto" class="foto-five">
+             <p>
+             If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+             </p>
+            </div>
      </div>
-     <hr>
-     </footer>
-    <img src="./img/background.png" alt="background" class="background">
-  </div>
+    <footer>
+     <div class="footer">
+         <img src="./img/logofooter.svg" alt="logo" class="logo">
+           <div class="contact-us">
+             <h3>Contact Us</h3>
+              <ul>
+                 <li> <a href="tel:+2905207927" +(290) 520-7927> <img src="./img/phone.svg" alt="phone" class="phone"> +(290) 520-7927  </a> </li>
+                 <li> <img src="./img/adress.svg" alt="Dubai, UAE" class="adres"> <a href="#"> Dubai,UAE </a>  </li>
+                 <li> <img src="./img/mail.svg" alt="mail" class="mail"> <a href="mailto:info@halatalents.com" info@halatalents.com>info@halatalents.com</a>  </li>
+             </ul>
+           </div>
+          <div class="our-company">
+              <h3>Our Company</h3>
+               <ul> 
+                  <li> About </li>
+                  <li> Pricing </li>
+                  <li> Blog </li>
+                  <li> About us </li>
+              </ul>
+           </div>
+           <div class="law">
+              <ul>
+                 <li> Privacy Policy </li>
+                 <li> Terms and Conditions </li>
+              </ul>
+          </div>
+          <div class="social-contacts">
+              <h3> Social Contacts </h3>
+               <ul>
+                 <li> Facebook </li>
+                 <li> Linked In </li>
+                 <li> YouTube </li>
+                 <li> Twitter </li>
+              </ul>
+          </div>
+           <img src="./img/background.png" alt="background" class="background">
+            <hr>
+            <img src="./img/c.svg" alt="c" class="citatum">
+            <p>Copyright 2020 - Hala Talents | A division of Techbak</p>
+          </div>
+    </footer>
 </body>
 </html>
