--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         </div>
        <img src="./img/workplace-1245776_1920.png" alt="Workplace" class="workplace-img">
     </div>
-     <div class="card-layout">
+    <div class="card-layout">
          <section class="card">
            <h2>Omnichannel POS</h2>
            <p>Sell in-store, at retail events, pop-up stores and even online. With all sales channels in one POS software, Hike manages all aspects of your retail business.</p>
@@ -59,8 +59,8 @@
          <a class="button" href="#"> Get started </a>
          <img src="./img/entrepreneur-593358_1920.png" alt="enterpreneur">
          </section>
-        </div>
-        <div class="download">
+    </div>
+    <div class="download">
         <div class="text-box">
             <h3> Grow your retail faster with
                 Drona POS software </h3>
@@ -93,49 +93,62 @@
         </div>
     </div>
     <div class="testimonials">
-        <div class="testimonials-text">
-         <h2>
+    <div class="testimonials-text">
+        <h2>
          Testimonials
-         </h2>
-         <p>
+        </h2>
+        <p>
          Don't just listen to us, check out what our 
          clients are saying!
-         </p>
-        </div>
-        <div class="quote">
-           <div class="one">
-             <img src="./img/FakeDP.png" alt="foto" class="foto-one">
-             <p>
-             If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
-             </p>
-           </div>
+        </p>
+    </div>
+    <div class="quote">
+          <div class="one">
+              <div class="wrap">
+              <img src="./img/foto_1.jpg" alt="foto" class="foto-one">
+              <p>
+               If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+              </p> 
+              </div>
+          </div>
            <div class="two">
-             <img src="./img/foto.png" alt="foto" class="foto-two">
-             <p>
-             If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
-             </p>
+             <div class="wrap">
+               <img src="./img/foto_2.jpg" alt="foto" class="foto-two">
+               <p>
+               If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+               </p>
+             </div>
             </div>
             <div class="three">
-             <img src="./img/three.png" alt="foto" class="foto-three">
-             <p>
-             If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
-             </p>
+              <div class="wrap">
+                <img src="./img/foto_3.jpg" alt="foto" class="foto-three">
+               <p>
+               If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+               </p>
+              </div>
             </div>
             <div class="four">
-             <img src="./img/fotolucy.png" alt="foto" class="foto-four">
-             <p> 
-             If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
-             </p>
+              <div class="wrap">
+                <img src="./img/foto_4.jpg" alt="foto" class="foto-four">
+                <p> 
+                If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+                </p>
+              </div>
             </div>
             <div class="five">
-             <img src="./img/fotos.png" alt="foto" class="foto-five">
-             <p>
-             If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
-             </p>
+              <div class="wrap">
+                <img src="./img/foto_5.jpg" alt="foto" class="foto-five">
+               <p>
+               If you aren't using Hala Talents, you're missing out, groundbreaking stuff. I am very pleased
+               </p>
+              </div>
             </div>
-     </div>
+    </div>
+    <img src="./img/background.png" alt="background" class="background">
+    </div>
     <footer>
      <div class="footer">
+       <div class="footet_top">
          <img src="./img/logofooter.svg" alt="logo" class="logo">
            <div class="contact-us">
              <h3>Contact Us</h3>
@@ -169,11 +182,11 @@
                  <li> Twitter </li>
               </ul>
           </div>
-           <img src="./img/background.png" alt="background" class="background">
-            <hr>
-            <img src="./img/c.svg" alt="c" class="citatum">
-            <p>Copyright 2020 - Hala Talents | A division of Techbak</p>
-          </div>
-    </footer>
+        </div>
+        <div class="footer_bottom">
+            <p>&copy; Copyright 2020 - Hala Talents | A division of Techbak</p>
+        </div>
+      </div>
+ </footer>
 </body>
 </html>
